Picture-in-Picture: various cleanups in WMPI and SurfaceLayerBridge.

Cleanups are:
 - WMPI: drops the usage of the callback for delayed Picture-in-Picture;
 - WMPI: drops pip_surface_id_ and request it from the bridge_ instead;
 - SurfaceLayerBridge: no longer set primary surface id when surface is created;
 - SurfaceLayerBridge: no longer sets size when surface is activated.

Bug: 858826
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I7ed0490207aa3966e5dc8d04e796558e8965232f
Reviewed-on: https://chromium-review.googlesource.com/1126450
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Reviewed-by: Jochen Eisinger <jochen@chromium.org>
Reviewed-by: Frank Liberato <liberato@chromium.org>
Reviewed-by: Fady Samuel <fsamuel@chromium.org>
Commit-Queue: Mounir Lamouri <mlamouri@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573319}
Former-commit-id: b642a3cd111a2b2ca1b312e77183f71890d3a7a3